--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,6 +48,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 exec-once = hypridle & hyprlock || hyprctl dispatch exit
 exec-once = waybar & hyprpaper & spotify & brave
+exec-once = neovide
 
 
 #############################
@@ -270,6 +271,8 @@ bind = SUPER SHIFT, J, movewindow, d
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
+
+windowrulev2 = workspace 1, class:^(neovide)$
 windowrulev2 = workspace 2, class:^(Brave-browser)$
 windowrulev2 = workspace 3, class:^(Spotify)$
 # Ignore maximize requests from apps. You'll probably like this.
