updated wallpapers,waybar and some more

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 exec-once = hypridle & hyprlock || hyprctl dispatch exit
 exec-once = waybar & hyprpaper & spotify & brave
-exec-once = neovide
+exec-once = kitty
 
 
 #############################
@@ -70,7 +70,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 5
 
     border_size = 2
 
@@ -89,11 +89,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.9
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -271,8 +271,6 @@ bind = SUPER SHIFT, J, movewindow, d
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
-
-windowrulev2 = workspace 1, class:^(neovide)$
 windowrulev2 = workspace 2, class:^(Brave-browser)$
 windowrulev2 = workspace 3, class:^(Spotify)$
 # Ignore maximize requests from apps. You'll probably like this.
