--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,46 +1,24 @@
-## name: Hachiko 
-## author: Mert18 
-
-# Cursor colors
-cursor                          #FF7979
-cursor_text_color               #111111
-
-# Color Schemes
-active_tab_foreground   #FFFAFA
-active_tab_background   #B1003C
-active_tab_font_style   bold
-inactive_tab_foreground #B1003C
-inactive_tab_background #FFFAFA
-tab_bar_margin_color            none
-
-mark1_foreground #FFFAFA
-mark1_background #870300
-
-active_border_color             #FFFAFA
-inactive_border_color           #870300
-bell_border_color               #870300
-visual_bell_color               none
-
-selection_foreground #FFFAFA
-selection_background #870300
-
-url_color #FF7979
-
-color0 #181818
-color8 #333333
-color1 #960042
-color9 #870300
-color2  #FF0000
-color10 #690000
-color3  #FF5D05
-color11 #6F2700
-color4  #FF2044
-color5  #FFEDCF
-color12 #333333
-color13 #FFFFB5
-color6  #6F0027
-color14 #F50056
-color7  #FFDAF1
-color15 #FFE6DA
-#white
-
+## name: ANSI 1987
+## blurb: Based on the VGA ANSI palette on IBM PC DOS & OS/2 sytems.
+foreground                      #aaaaaa
+background                      #000000
+selection_foreground            #000000
+selection_background            #aaaaaa
+cursor                          #aaaaaa
+cursor_text_color               #aaaaaa
+color0 #000000
+color8 #555555
+color1 #aa0000
+color9 #ff5555
+color2  #00aa00
+color10 #55ff55
+color3  #aa5500
+color11 #ffff55
+color4  #0000aa
+color12 #5555ff
+color5  #aa00aa
+color13 #ff55ff
+color6  #00aaaa
+color14 #55ffff
+color7  #aaaaaa
+color15 #ffffff
