--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=,1920x1080@144, 0x0, 1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = wofi --show drun 
 
 
