added drun support

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/lvx/.config/dotfiles/wallpapers/Teo_Crawford_GH_resized_39.jpg
-wallpaper = ,/home/lvx/.config/dotfiles/wallpapers/Teo_Crawford_GH_resized_39.jpg
+preload = /home/lvx/.config/dotfiles/wallpapers/wp6929104-ecosystem-wallpapers.png  
+wallpaper = ,/home/lvx/.config/dotfiles/wallpapers/wp6929104-ecosystem-wallpapers.png 
 splash = false
