--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,127 +1,120 @@
+//   _____ _____ _____ _____ _____ _____ _____ _____ _____ 
+//  |   __|  _  |   __|_   _|   __|   __|_   _|     |  |  |
+//  |   __|     |__   | | | |   __|   __| | | |   --|     |
+//  |__|  |__|__|_____| |_| |__|  |_____| |_| |_____|__|__|  GROUPS
+//
+//  by Bina
+
+  
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "source": "~/.config/fastfetch/xero.png",
-        "type": "kitty",
-        "height": 15,
-        "width": 30,
-        "padding": {
-            "top": 5,
-            "left": 3
-        }
+    	"source": "~/.local/share/fastfetch/images/penrose-sky-wp.png",
+    	"type": "kitty",
+      	"height": 20,
+      	"padding": {
+    		"top": 1
+      	}
+    },
+    "display": {
+          "separator": " ➜  "
     },
     "modules": [
         "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌──────────────────────Hardware──────────────────────┐"
-        },
-        {
-            "type": "host",
-            "key": " PC",
-            "keyColor": "green"
-        },
-        {
-            "type": "cpu",
-            "key": "│ ├",
-            "showPeCoreCount": true,
-            "keyColor": "green"
-        },
-        {
-            "type": "gpu",
-            "key": "│ ├󰍛",
-            "keyColor": "green"
-        },
-        {
-            "type": "memory",
-            "key": "│ ├󰍛",
-            "keyColor": "green"
-        },
-        {
-            "type": "disk",
-            "key": "└ └",
-            "keyColor": "green"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────────────┘"
-        },
         "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌──────────────────────Software──────────────────────┐"
-        },
-        {
+        "break",
+         {
             "type": "os",
-            "key": " OS",
-            "keyColor": "yellow"
+            "key": "OS   ",
+            "keyColor": "31",  // = color1
         },
         {
             "type": "kernel",
-            "key": "│ ├",
-            "keyColor": "yellow"
+            "key": " ├  ",
+            "keyColor": "31",
         },
         {
             "type": "packages",
-            "key": "│ ├󰏖",
-            "keyColor": "yellow"
+            "format": "{} (pacman)",
+            "key": " ├ 󰏖 ",
+            "keyColor": "31",  
         },
         {
             "type": "shell",
-            "key": "└ └",
-            "keyColor": "yellow"
+            "key": " └  ",
+            "keyColor": "31", 
         },
         "break",
         {
-            "type": "de",
-            "key": " DE",
-            "keyColor": "blue"
-        },
-        {
-            "type": "lm",
-            "key": "│ ├",
-            "keyColor": "blue"
-        },
-        {
             "type": "wm",
-            "key": "│ ├",
-            "keyColor": "blue"
+            "key": "WM   ",
+            "keyColor": "32", 
         },
         {
             "type": "wmtheme",
-            "key": "│ ├󰉼",
-            "keyColor": "blue"
+            "key": " ├ 󰉼 ",
+            "keyColor": "32",
         },
         {
-            "type": "gpu",
-            "key": "└ └󰍛",
-            "format": "{3}",
-            "keyColor": "blue"
+            "type": "icons",
+            "key": " ├ 󰀻 ",
+            "keyColor": "32",
         },
         {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────────────┘"
+            "type": "cursor",
+            "key": " ├  ",
+            "keyColor": "32", 
+        },
+        {
+            "type": "terminal",
+            "key": " ├  ",
+            "keyColor": "32",
+        },
+        {
+            "type": "terminalfont",
+            "key": " └  ",
+            "keyColor": "32", 
         },
         "break",
         {
-            "type": "custom",
-            "format": "\u001b[90m┌────────────────────Uptime / Age────────────────────┐"
+            "type": "host",
+            "format": "{5} {1} Type {2}",
+            "key": "PC   ",
+            "keyColor": "33",
         },
         {
-            "type": "command",
-            "key": "  OS Age ",
-            "keyColor": "magenta",
-            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+            "type": "cpu",
+            "format": "{1} ({3}) @ {7} GHz",
+            "key": " ├  ",
+            "keyColor": "33",
         },
         {
-            "type": "uptime",
-            "key": "  Uptime ",
-            "keyColor": "magenta"
+            "type": "gpu",
+            "format": "{1} {2} @ {12} GHz",            
+            "key": " ├ 󰢮 ",
+            "keyColor": "33",
         },
         {
-            "type": "custom",
-            "format": "\u001b[90m└────────────────────────────────────────────────────┘"
+            "type": "memory",
+            "key": " ├  ",
+            "keyColor": "33",
         },
+        {
+            "type": "swap",
+            "key": " ├ 󰓡 ",
+            "keyColor": "33",
+        },
+        {
+            "type": "disk",
+            "key": " ├ 󰋊 ",
+            "keyColor": "33",
+        },
+        {
+            "type": "monitor",
+            "key": " └  ",
+            "keyColor": "33",
+        },
+        "break",
         "break",
     ]
 }
