--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -133,14 +133,14 @@
             "warning": 60,
             "critical": 15
         },
-        "format": "{capacity}%  ",
-        "format-full": "{capacity}%  ",
-        "format-charging": "{capacity}% 󰂄",
+        "format": "{capacity}% {icon}",
+        "format-full": "{capacity}% {icon}",
+        "format-charging": "{capacity}% 󰢟 ",
         "format-plugged": "",
         "format-alt": "{time} {icon}",
         "format-good": "", // An empty format will hide the module
         "format-full": "",
-        "format-icons": ["", "", "", "", ""],
+        "format-icons": [" ", " ", " ", " ", " "],
         "interval": 3,
     },
     "battery#bat2": {
