--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -168,7 +168,7 @@
     },
     "pulseaudio": {
         "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% 󰥰 {format_source}",
+        "format-bluetooth": "{volume}%  {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
         "format-source": "",
