--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,10 @@ font_size 13.0
 background_opacity 0.95
 
 enable_audio_bell no
+cursor_text_color #d400ff
+cursor_shape block
+cursor_blink_interval -1
+cursor_beam_thickness 1.5
 
 # BEGIN_KITTY_FONTS
 font_family      family="Liga SFMono Nerd Font"
