activate vi mode in zsh and enable copilot chat in nvim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,6 +8,7 @@ cursor_text_color #d400ff
 cursor_shape block
 cursor_blink_interval -1
 cursor_beam_thickness 1.5
+sync_to_monitor yes
 
 # BEGIN_KITTY_FONTS
 font_family      family="Liga SFMono Nerd Font"
