--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,9 +47,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = hypridle & hyprlock || hyprctl dispatch exit
-exec-once = waybar & hyprpaper & spotify & brave
-exec-once = kitty
-
+exec-once = waybar & hyprpaper & spotify & brave & kitty
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -271,6 +269,7 @@ bind = SUPER SHIFT, J, movewindow, d
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
+windowrulev2 = workspace 1, class:^(neovide)$
 windowrulev2 = workspace 2, class:^(Brave-browser)$
 windowrulev2 = workspace 3, class:^(Spotify)$
 # Ignore maximize requests from apps. You'll probably like this.
