--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,118 +1,63 @@
-//   _____ _____ _____ _____ _____ _____ _____ _____ _____ 
-//  |   __|  _  |   __|_   _|   __|   __|_   _|     |  |  |
-//  |   __|     |__   | | | |   __|   __| | | |   --|     |
-//  |__|  |__|__|_____| |_| |__|  |_____| |_| |_____|__|__|  GROUPS
-//
-//  by Bina
-
-  
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-    	"source": "~/.local/share/fastfetch/images/penrose-sky-wp.png",
-    	"type": "kitty",
-      	"height": 20,
-      	"padding": {
-    		"top": 1
-      	}
+        "source": "~/.config/fastfetch/logo",
+        "padding": {
+            "top": 2,
+            "right": 6
+        }
     },
     "display": {
-          "separator": " ➜  "
+        "separator": " •  "
     },
     "modules": [
+	"break",
+	"break",
+	{
+            "type": "title",
+            "color": {
+                "user": "32",  // = color2
+                "at": "37",
+                "host": "32"
+            }
+        },
         "break",
-        "break",
-        "break",
-         {
+        {
             "type": "os",
-            "key": "OS   ",
-            "keyColor": "31",  // = color1
+            "key": "distribution   ",
+            "keyColor": "33",
         },
         {
             "type": "kernel",
-            "key": " ├  ",
-            "keyColor": "31",
+            "key": "linux kernel   ",
+            "keyColor": "33",
         },
         {
             "type": "packages",
             "format": "{} (pacman)",
-            "key": " ├ 󰏖 ",
-            "keyColor": "31",  
+            "key": "packages       ",
+            "keyColor": "33",  
         },
         {
             "type": "shell",
-            "key": " └  ",
-            "keyColor": "31", 
-        },
-        "break",
-        {
-            "type": "wm",
-            "key": "WM   ",
-            "keyColor": "32", 
-        },
-        {
-            "type": "wmtheme",
-            "key": " ├ 󰉼 ",
-            "keyColor": "32",
-        },
-        {
-            "type": "icons",
-            "key": " ├ 󰀻 ",
-            "keyColor": "32",
-        },
-        {
-            "type": "cursor",
-            "key": " ├  ",
-            "keyColor": "32", 
+            "key": "unix shell     ",
+            "keyColor": "33", 
         },
         {
             "type": "terminal",
-            "key": " ├  ",
-            "keyColor": "32",
+            "key": "terminal       ",
+            "keyColor": "33", 
         },
         {
-            "type": "terminalfont",
-            "key": " └  ",
-            "keyColor": "32", 
+            "type": "wm",
+            "format": "{} ({3})",
+            "key": "window manager ",
+            "keyColor": "33", 
         },
         "break",
         {
-            "type": "host",
-            "format": "{5} {1} Type {2}",
-            "key": "PC   ",
-            "keyColor": "33",
-        },
-        {
-            "type": "cpu",
-            "format": "{1} ({3}) @ {7} GHz",
-            "key": " ├  ",
-            "keyColor": "33",
-        },
-        {
-            "type": "gpu",
-            "format": "{1} {2} @ {12} GHz",            
-            "key": " ├ 󰢮 ",
-            "keyColor": "33",
-        },
-        {
-            "type": "memory",
-            "key": " ├  ",
-            "keyColor": "33",
-        },
-        {
-            "type": "swap",
-            "key": " ├ 󰓡 ",
-            "keyColor": "33",
-        },
-        {
-            "type": "disk",
-            "key": " ├ 󰋊 ",
-            "keyColor": "33",
-        },
-        {
-            "type": "monitor",
-            "key": " └  ",
-            "keyColor": "33",
+            "type": "colors",
+            "symbol": "circle",
         },
         "break",
         "break",
