--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,7 +47,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = hypridle & hyprlock || hyprctl dispatch exit
-exec-once = waybar & hyprpaper & spotify & zen-browser & ghostty
+exec-once = waybar & hyprpaper & zen-browser & ghostty
 
 #############################
 ### ENVIRONMENT VARIABLES ###
