--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -2,17 +2,16 @@
 {
     "layer": "bottom",
     // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": "30",
+    "height": "25",
     "width": 1920,
     "spacing": 20,
     "modules-left": [
         "custom/endvr",
-        "hyprland/window",
-        "cava",
+        "wlr/taskbar",
     ],
-    "modules-center": [
-        "hyprland/workspaces"
-    ],
+    // "modules-center": [
+    //     "hyprland/workspaces"
+    // ],
     "modules-right": [
         "pulseaudio",
         "disk",
@@ -139,7 +138,6 @@
         "format-charging": "{capacity}% 󰢟 ",
         "format-plugged": "",
         "format-alt": "{time} {icon}",
-        "format-good": "", // An empty format will hide the module
         "format-full": "",
         "format-icons": [" ", " ", " ", " ", " "],
         "interval": 3,
@@ -158,6 +156,28 @@
         "power-saver": " "
       }
     },
+
+"wlr/taskbar": {
+    "format": "{icon}",
+    "icon-size": 25,
+    "icon-theme": "Numix-Circle",
+    "tooltip-format": "{title}",
+    "on-click": "activate",
+    "on-click-middle": "close",
+    "active-first": false,
+    "sort-app-by-appid": true,
+    // "ignore-list": [
+    //    "Alacritty"
+    // ],
+    // "app_ids-mapping": {
+    //   "firefoxdeveloperedition": "firefox-developer-edition"
+    // },
+    // "rewrite": {
+    //     "Firefox Web Browser": "Firefox",
+    //     "Foot Server": "Terminal"
+    // }
+},
+
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{ipaddr}  ",
