--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,8 +1,8 @@
 background {
     monitor =
-    path = /home/lvx/.config/dotfiles/wallpapers/Teo_Crawford_GH_resized_39.jpg
+    path = /home/lvx/.config/dotfiles/wallpapers/wallpaperflare.com_wallpaper.jpg
     color = rgba(25, 20, 20, 1.0)
-    blur_passes = 1
+    blur_passes = 0
 }
 
 input-field {
