--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,8 +46,8 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = hypridle & hyprlock || hyprctl dispatch exit
-exec-once = waybar & hyprpaper & zen-browser & ghostty
+exec-once = hypridle || hyprctl dispatch exit
+exec-once = waybar & hyprpaper & zen-browser & ghostty & dunst
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -67,8 +67,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 15
-    gaps_out = 15
+    gaps_in = 5
+    gaps_out = 5
 
     border_size = 2
 
@@ -76,13 +76,19 @@ general {
     col.active_border = rgba(b405ffaa)
     col.inactive_border = rgba(595959aa)
 
+
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = master
+}
+
+
+cursor {
+    inactive_timeout = 3
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -90,7 +96,7 @@ decoration {
     rounding = 0
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
+    active_opacity = 1
     inactive_opacity = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -255,6 +261,13 @@ bind = SUPER SHIFT, H, movewindow, l
 bind = SUPER SHIFT, L, movewindow, r
 bind = SUPER SHIFT, K, movewindow, u
 bind = SUPER SHIFT, J, movewindow, d
+
+#Resize windows
+
+bind = SUPER CTRL, l, resizeactive, 50 0
+bind = SUPER CTRL, h, resizeactive, -50 0
+bind = SUPER CTRL, j, resizeactive, 0 -30
+bind= SUPER CTRL, k, resizeactive, 0 30
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
