--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/lvx/.config/dotfiles/wallpapers/wp6929104-ecosystem-wallpapers.png  
-wallpaper = ,/home/lvx/.config/dotfiles/wallpapers/wp6929104-ecosystem-wallpapers.png 
+preload = /home/lvx/.config/dotfiles/wallpapers/wallpaperflare.com_wallpaper.jpg
+wallpaper = ,/home/lvx/.config/dotfiles/wallpapers/wallpaperflare.com_wallpaper.jpg
 splash = false
